pause working ['enter' to pause, 'l' to unpause]

--- a/cfg/input.cfg
+++ b/cfg/input.cfg
@@ -3,5 +3,8 @@
 	"left":   "a",
 	"down":   "s",
 	"right":  "d",
-	"action": "space"
+	"action": "j",
+	"attack": "k",
+	"cancel": "l",
+	"start":  "enter"
 }
