added new layers to the map config files

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -1,7 +1,8 @@
 {
 	"tilemap" : {
 		"#" : "obstacle",
-		"." : "ground"
+		"." : "ground",
+		" " : "free"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
