items and enemies DYING! (and fading)

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -2,7 +2,9 @@
 	"tilemap" : {
 		"#" : "obstacle",
 		"." : "ground",
-		" " : "free"
+		" " : "free",
+		"i" : "item",
+		"e" : "enemy"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
