--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -4,7 +4,8 @@
 		"." : "ground",
 		" " : "free",
 		"i" : "item",
-		"e" : "enemy"
+		"e" : "enemy",
+		"b" : "block"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
