new camera, new objects, will be uploading the models soon for you

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -5,7 +5,8 @@
 		" " : "free",
 		"i" : "item",
 		"e" : "enemy",
-		"b" : "block"
+		"b" : "block",
+		"t" : "tree"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
