fixed the effing collision bug, it was partly my fault... sorry

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -1,6 +1,6 @@
 {
 	"tilemap" : {
-		"#" : "obstacle",
+		"o" : "obstacle",
 		"." : "ground",
 		" " : "free",
 		"i" : "item",
@@ -11,3 +11,4 @@
 
 	"themes" : {"normal" : "normal.txt"}
 }
+
