mudei um pouco o sendCommand de HumanPlayer

--- a/cfg/input.cfg
+++ b/cfg/input.cfg
@@ -6,5 +6,12 @@
 	"action": "j",
 	"attack": "k",
 	"cancel": "l",
-	"start":  "enter"
+	"start":  "enter",
+	"up1":     "t",
+	"left1":   "f",
+	"down1":   "g",
+	"right1":  "h",
+	"action1": "v",
+	"attack1": "b",
+	"cancel1": "n"
 }
