liftable object can be picked and throwed with action button

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -6,7 +6,8 @@
 		"i" : "item",
 		"e" : "enemy",
 		"b" : "block",
-		"t" : "tree"
+		"t" : "tree",
+		"l" : "liftable"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
