i expect thing don't get phucked... backuped the files and maybe git got lost with the diff...

--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -7,7 +7,9 @@
 		"e" : "enemy",
 		"b" : "block",
 		"t" : "tree",
-		"l" : "liftable"
+		"l" : "liftable",
+		"s" : "inactive_switch",
+		"S" : "active_switch"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
