--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -9,7 +9,8 @@
 		"t" : "tree",
 		"l" : "liftable",
 		"s" : "inactive_switch",
-		"S" : "active_switch"
+		"S" : "active_switch",
+		"d" : "door"
 	},
 
 	"themes" : {"normal" : "normal.txt"}
