--- a/cfg/stage.cfg
+++ b/cfg/stage.cfg
@@ -8,6 +8,7 @@
 		"b" : "block",
 		"t" : "tree",
 		"l" : "liftable",
+		"T" : "bush",
 		"s" : "inactive_switch",
 		"S" : "active_switch",
 		"d" : "door"
